--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://openstudy.jp/'
+languageCode = 'ja-jp'
+title = 'OpenStudy'
+theme = 'myTheme'
