--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,9 @@ baseURL = 'https://openstudy.jp/'
 languageCode = 'ja-jp'
 title = 'OpenStudy'
 theme = 'myTheme'
+pluralizeListTitles = false
+
+[markup]
+    [markup.goldmark]
+        [markup.goldmark.renderer]
+            unsafe = true
