Modify frontmatter to allow only ":git"

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,9 @@ theme = 'myTheme'
 pluralizeListTitles = false
 enableGitInfo = true
 
+[frontmatter]
+    lastmod = [":git"]
+
 # Enable syntax highlightning
 pygmentsCodeFences = true
 
