Enabel only "tags" taxonomy

--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,6 @@ pygmentsCodeFences = true
 [params]
     # Sass files that always imported
     basicStyle = ["default", "header", "footer"]
+
+[taxonomies]
+    tag = 'tags'
