--- a/themes/myTheme/theme.toml
+++ b/themes/myTheme/theme.toml
@@ -3,7 +3,7 @@ license = "MIT"
 licenselink = "https://github.com/lin-24-ia/OpenStudy/blob/main/themes/myTheme/LICENSE"
 description = "Hugo theme for OpenStudy."
 homepage = "https://openstudy.jp/"
-tags = []
+tag = []
 features = []
 min_version = "0.41.0"
 
