Fix duplicated label

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -46,8 +46,8 @@ body:
 
   - type: textarea
     attributes:
-      label: OSのバージョン
-      description: OSのバージョンを記入してください。
+      label: ブラウザのバージョン
+      description: ブラウザのバージョンを記入してください。
     validations:
       required: true
 
